test/expansion/loadbalancers_must_have_env_source_gen.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: loadbalancers-must-have-env-gen
spec:
  match:
    scope: "Namespaced"
    namespaces: [ "loadbalancers" ]
    kinds:
    - apiGroups: [ "" ]
      kinds: [ "Pod" ]
    source: "Generated"
  parameters:
    labels: [ "env" ]
