test/expansion/warn_expand_deployments.yaml
apiVersion: expansion.gatekeeper.sh/v1alpha1
kind: ExpansionTemplate
metadata:
  name: expand-deployments
spec:
  enforcementAction: "warn"
  applyTo:
  - groups: [ "apps" ]
    kinds: [ "Deployment", "ReplicaSet" ]
    versions: [ "v1" ]
  templateSource: "spec.template"
  generatedGVK:
    kind: "Pod"
    group: ""
    version: "v1"
